# OPTI637

./: .gitignore  CMakeLists.txt  README.md
src/: CTFunc.h  GramMain.cpp  MRFunc.h  basicFunc.h  main.cpp  spiral.cpp
